kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: room
  namespace: airbnb
  labels:
    app: room
spec:
  replicas: 1
  selector:
    matchLabels:
      app: room
  template:
    metadata:
      labels:
        app: room
    spec:
      containers:
        - name: room
          image: 985702435631.dkr.ecr.ap-northeast-2.amazonaws.com/room:latest
          ports:
            - containerPort: 8080
#          resources:
#            requests:
#              memory: "256Mi"
#              cpu: "1000m"
#            limits:
#              memory: "512Mi"
#              cpu: "2500m"
#          args:
#          - /bin/sh
#          - -c
#          - touch /tmp/healthy; sleep 30; rm -rf /tmp/healthy; sleep 600
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 25
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
#            exec:
#              command:
#              - cat
#              - /tmp/healthy
            initialDelaySeconds: 30
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5
            successThreshold: 1
