kubernetes/destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dr-room
  namespace: airbnb
spec:
  host: room
  trafficPolicy:
#    connectionPool:
#      http:
#        http1MaxPendingRequests: 1
#        maxRequestsPerConnection: 1
    outlierDetection:
      interval: 1s
      consecutiveErrors: 1
      baseEjectionTime: 10s
      maxEjectionPercent: 100
