kubernetes/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: room
  namespace: airbnb
spec:
  hosts:
  - room
  http:
  - route:
    - destination:
        host: room
        subset: version-v1
      weight: 100
---
